# old-aiogram-template

./: .gitignore  LICENSE  loader.py  main.py  pyproject.toml  requirements.txt
handlers/: common.py
src/: bot.py  config.py
utils/: commands.py
