[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = "Template for creating telegram-bots on aiogram"
authors = ["Kudyakov Artem <t3m8ch@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.13"
aioredis = "^1.3.1"
asyncpg = "^0.23.0"
uvloop = "^0.15.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bot = "src:bot"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
